
    HADOOP-11714. Add more trace log4j messages to SpanReceiverHost (cmccabe)

    HADOOP-9329. document native build dependencies in BUILDING.txt (Vijay Bhat
    via Colin P. McCabe)

    HADOOP-10670. Allow AuthenticationFilters to load secret from signature
    secret files. (Kai Zheng via wheat9)

    HADOOP-11801. Update BUILDING.txt for Ubuntu. (Gabor Liptak via
    Arpit Agarwal)

  OPTIMIZATIONS

    HADOOP-11323. WritableComparator#compare keeps reference to byte array.
    (Wilfred Spiegelenburg via wang)

    HADOOP-11238. Update the NameNode's Group Cache in the background when
    possible (Chris Li via Colin P. McCabe)

    HADOOP-10809. hadoop-azure: page blob support. (Dexter Bradshaw,
    Mostafa Elhemali, Eric Hanson, and Mike Liddell via cnauroth)

    HADOOP-11188. hadoop-azure: automatically expand page blobs when they become
    full. (Eric Hanson via cnauroth)

    HADOOP-11506. Configuration variable expansion regex expensive for long
    values. (Gera Shegalov via gera)

    HADOOP-11231. Remove dead code in ServletUtil. (Li Lu via wheat9)

    HADOOP-11620. Add support for load balancing across a group of KMS for HA.
    (Arun Suresh via wang)

    HADOOP-11183. Memory-based S3AOutputstream. (Thomas Demoor via stevel)

    HADOOP-11633. Convert remaining branch-2 .apt.vm files to markdown.
    (Masatake Iwasaki via wheat9)

  BUG FIXES

    HADOOP-11512. Use getTrimmedStrings when reading serialization keys
    (Ryan P via harsh)

    HADOOP-11488. Difference in default connection timeout for S3A FS
    (Daisuke Kobayashi via harsh)

    HADOOP-11256. Some site docs have inconsistent appearance (Masatake 
    Iwasaki via aw)

    HADOOP-11318. Update the document for hadoop fs -stat (aajisaka)

    HADOOP 11400. GraphiteSink does not reconnect to Graphite after 'broken pipe' 
    (Kamil Gorlo via raviprak)

    HADOOP-11236. NFS: Fix javadoc warning in RpcProgram.java (Abhiraj Butala via harsh)
